[package]
name = "xtp"
version = "0.1.0-alpha.1"
authors = ["Weiyuan Wu <doomsplayer@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/xtp"
repository = "https://github.com/dovahcrow/xtp-rs"

[build-dependencies]
bindgen = "0.52"
cc = "1.0"

[dependencies]
libc = "0.2"
failure = "0.1"

[lib]
name = "xtp"
path = "src/lib.rs"


[dev-dependencies]
structopt = "0.3"
paw = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"